⬆️ (pyproject.toml): upgrade dependencies ipaddress to version 1.0.23 and requests to version 2.32.3 The dependencies ipaddress and requests have been upgraded to their respective versions 1.0.23 and 2.32.3 to ensure compatibility with the latest features and bug fixes provided by these libraries.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "pyaml>=24.7.0",
     "toml>=0.10.2",
     "prompt-toolkit>=3.0.47",
+    "ipaddress>=1.0.23",
+    "requests>=2.32.3",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
