--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,21 @@
 [project]
 name = "downloader-cli"
-version = "0.1.0"
-description = "Add your description here"
+version = "1.0.0"
+description = "Downloader CLI"
 authors = [
     { name = "tadeasf", email = "taddy.fort@gmail.com" }
 ]
 dependencies = [
-    "python-dotenv>=1.0.1",
-    "typer>=0.12.5",
-    "pyaml>=24.7.0",
-    "toml>=0.10.2",
-    "prompt-toolkit>=3.0.47",
-    "ipaddress>=1.0.23",
-    "requests>=2.32.3",
+    "python-dotenv>=0.9.0",
+    "typer>=0.9.0",
+    "pyaml>=5.3",
+    "toml>=0.10.0",
+    "prompt-toolkit>=3.0.0",
+    "ipaddress>=1.0.22",
+    "requests>=2.25.0",
 ]
 readme = "README.md"
-requires-python = ">= 3.12"
+requires-python = ">= 3.11"
 
 [build-system]
 requires = ["hatchling"]
@@ -32,4 +32,4 @@ allow-direct-references = true
 packages = ["src/downloader_cli"]
 
 [project.scripts]
-downloader = "downloader_cli.main:app"
+downloader-cli = "downloader_cli.main:app"
