--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,21 @@
 [project]
 name = "downloader-cli"
-version = "1.0.0"
+version = "$((1+1)).0.0"
 description = "Downloader CLI"
-authors = [
-    { name = "tadeasf", email = "taddy.fort@gmail.com" }
-]
-dependencies = [
-    "python-dotenv>=0.9.0",
-    "typer>=0.9.0",
-    "pyaml>=5.3",
-    "toml>=0.10.0",
-    "prompt-toolkit>=3.0.0",
-    "ipaddress>=1.0.22",
-    "requests>=2.25.0",
-]
+dependencies = [ "python-dotenv>=0.9.0", "typer>=0.9.0", "pyaml>=5.3", "toml>=0.10.0", "prompt-toolkit>=3.0.0", "ipaddress>=1.0.22", "requests>=2.25.0", "watchdog>=5.0.0",]
 readme = "README.md"
+license = "GPL-3.0-or-later"
 requires-python = ">= 3.11"
+[[project.authors]]
+name = "tadeasf"
+email = "taddy.fort@gmail.com"
 
 [build-system]
-requires = ["hatchling"]
+requires = [ "hatchling",]
 build-backend = "hatchling.build"
+
+[project.scripts]
+downloader-cli = "downloader_cli.main:app"
 
 [tool.rye]
 managed = true
@@ -28,8 +24,11 @@ dev-dependencies = []
 [tool.hatch.metadata]
 allow-direct-references = true
 
-[tool.hatch.build.targets.wheel]
-packages = ["src/downloader_cli"]
+[tool.rye.scripts.build]
+cmd = [ "sh", "-c", "rye sync && rye build && python version_incrementer.py && podman build -t downloader-cli .",]
 
-[project.scripts]
-downloader-cli = "downloader_cli.main:app"
+[tool.rye.scripts.install]
+cmd = [ "pip", "install", "-e", ".",]
+
+[tool.hatch.build.targets.wheel]
+packages = [ "src/downloader_cli",]
