--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "downloader-cli"
-version = "1.1.0"
+version = "1.2.0"
 description = "Downloader CLI"
 dependencies = [ "python-dotenv>=0.9.0", "typer>=0.9.0", "pyaml>=5.3", "toml>=0.10.0", "prompt-toolkit>=3.0.0", "ipaddress>=1.0.22", "requests>=2.25.0", "watchdog>=5.0.0",]
 readme = "README.md"
@@ -15,7 +15,7 @@ requires = [ "hatchling",]
 build-backend = "hatchling.build"
 
 [project.scripts]
-downloader-cli = "downloader_cli.main:app"
+downloader = "downloader_cli.main:app"
 
 [tool.rye]
 managed = true
