✨ (pyproject.toml): upgrade aiohttp dependency to version 3.10.5 to introduce new functionality for handling HTTP requests 🔧 (generate_playlist.py): refactor HTTP server implementation to use aiohttp library for improved performance and flexibility The aiohttp dependency in the pyproject.toml file is upgraded to version 3.10.5 to leverage new features and improvements for handling HTTP requests. The HTTP server implementation in the generate_playlist.py file is refactored to use aiohttp library, providing better performance and flexibility compared to the previous implementation using http.server and socketserver.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,17 @@
 [project]
 name = "downloader-cli"
-version = "1.11.0"
+version = "1.12.0"
 description = "Downloader CLI"
-dependencies = [ "python-dotenv>=0.9.0", "typer>=0.9.0", "pyaml>=5.3", "toml>=0.10.0", "prompt-toolkit>=3.0.0", "ipaddress>=1.0.22", "requests>=2.25.0", "watchdog>=5.0.0",]
+dependencies = [
+    "typer>=0.9.0",
+    "pyaml>=5.3",
+    "toml>=0.10.0",
+    "prompt-toolkit>=3.0.0",
+    "ipaddress>=1.0.22",
+    "requests>=2.25.0",
+    "watchdog>=5.0.0",
+    "aiohttp>=3.10.5",
+]
 readme = "README.md"
 license = "GPL-3.0-or-later"
 requires-python = ">= 3.11"
