--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "downloader-cli"
-version = "1.12.0"
+version = "1.13.0"
 description = "Downloader CLI"
 dependencies = [
     "typer>=0.9.0",
@@ -11,6 +11,7 @@ dependencies = [
     "requests>=2.25.0",
     "watchdog>=5.0.0",
     "aiohttp>=3.10.5",
+    "aiofiles>=24.1.0",
 ]
 readme = "README.md"
 license = "GPL-3.0-or-later"
