⬆️ (pyproject.toml): add aiohttp-cors dependency to support CORS in aiohttp server ✨ (generate_playlist.py): implement CORS support in aiohttp server to allow cross-origin requests and enhance security The aiohttp-cors dependency is added to the project to enable Cross-Origin Resource Sharing (CORS) support in the aiohttp server. CORS is essential for allowing cross-origin requests in web applications, enhancing security by controlling which resources can be accessed from different origins. The implementation of CORS in the aiohttp server ensures that the server can handle requests from different domains securely.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "downloader-cli"
-version = "1.17.0"
+version = "1.18.0"
 description = "Downloader CLI"
 dependencies = [
     "typer>=0.9.0",
@@ -12,6 +12,7 @@ dependencies = [
     "watchdog>=5.0.0",
     "aiohttp>=3.10.5",
     "aiofiles>=24.1.0",
+    "aiohttp-cors>=0.7.0",
 ]
 readme = "README.md"
 license = "GPL-3.0-or-later"
