--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "downloader-cli"
-version = "1.22.0"
+version = "1.23.0"
 description = "Downloader CLI"
 dependencies = [
     "typer>=0.9.0",
@@ -10,9 +10,9 @@ dependencies = [
     "ipaddress>=1.0.22",
     "requests>=2.25.0",
     "watchdog>=5.0.0",
-    "aiohttp>=3.10.5",
     "aiofiles>=24.1.0",
-    "aiohttp-cors>=0.7.0",
+    "starlette>=0.38.2",
+    "uvicorn>=0.30.6",
 ]
 readme = "README.md"
 license = "GPL-3.0-or-later"
