--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "downloader-cli"
-version = "1.33.0"
+version = "1.34.0"
 description = "Downloader CLI"
 dependencies = [
     "typer>=0.9.0",
@@ -13,6 +13,7 @@ dependencies = [
     "aiofiles>=24.1.0",
     "starlette>=0.38.2",
     "uvicorn>=0.30.6",
+    "fastapi>=0.112.2",
 ]
 readme = "README.md"
 license = "GPL-3.0-or-later"
